# infini-transformer

./: .gitignore  LICENSE  MANIFEST.in  pyproject.toml  readme.md  test_infini_transformer.py
example/: __init__.py  modinfiniformer.py
examples/: modinfiniformer.py
infini_transformer/: __init__.py  activations.py  compressive_memory.py  decoder.py  infini_transformer.py  positional_embeddings.py  transformer.py  types.py
infini_transformer/example/: modinfiniformer.py
tests/: __init__.py  test_transformer.py
